src/cimgui_ext/include/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImU32;        
typedef struct ImFont_t ImFont;                                      
typedef struct ImFontBaked_t ImFontBaked;                            
typedef struct ImGuiSizeCallbackData_t ImGuiSizeCallbackData;                  
typedef int ImGuiCol;             
typedef int ImGuiCond;            
typedef void (*ImGuiSizeCallback)(ImGuiSizeCallbackData* data);           
CIMGUI_API ImVec2      ImGui_GetWindowPos(void);                                  
CIMGUI_API ImVec2      ImGui_GetWindowSize(void);                                 
CIMGUI_API float       ImGui_GetWindowWidth(void);                                
CIMGUI_API float       ImGui_GetWindowHeight(void);                               
CIMGUI_API void ImGui_SetNextWindowPos(ImVec2 pos, ImGuiCond cond , ImVec2 pivot );  
CIMGUI_API void ImGui_SetNextWindowSize(ImVec2 size, ImGuiCond cond );                                   
CIMGUI_API void ImGui_SetNextWindowSizeConstraints(ImVec2 size_min, ImVec2 size_max, ImGuiSizeCallback custom_callback , void* custom_callback_data ); 
CIMGUI_API void ImGui_SetNextWindowContentSize(ImVec2 size);                                                      
CIMGUI_API void ImGui_SetNextWindowCollapsed(bool collapsed, ImGuiCond cond );                           
CIMGUI_API void ImGui_SetNextWindowFocus(void);                                                                   
CIMGUI_API void ImGui_SetNextWindowScroll(ImVec2 scroll);                                                         
CIMGUI_API void ImGui_SetNextWindowBgAlpha(float alpha);                                                          
CIMGUI_API void ImGui_SetWindowPos(ImVec2 pos, ImGuiCond cond );                                         
CIMGUI_API void ImGui_SetWindowSize(ImVec2 size, ImGuiCond cond );                                       
CIMGUI_API void ImGui_SetWindowCollapsed(bool collapsed, ImGuiCond cond );                               
CIMGUI_API void ImGui_SetWindowFocus(void);                                                                       
CIMGUI_API void ImGui_SetWindowPosStr(const char* name, ImVec2 pos, ImGuiCond cond );                    
CIMGUI_API void ImGui_SetWindowSizeStr(const char* name, ImVec2 size, ImGuiCond cond );                  
CIMGUI_API void ImGui_SetWindowCollapsedStr(const char* name, bool collapsed, ImGuiCond cond );          
CIMGUI_API void ImGui_SetWindowFocusStr(const char* name);                                                        
CIMGUI_API float ImGui_GetScrollX(void);                                                     
CIMGUI_API float ImGui_GetScrollY(void);                                                     
CIMGUI_API void  ImGui_SetScrollX(float scroll_x);                                           
CIMGUI_API void  ImGui_SetScrollY(float scroll_y);                                           
CIMGUI_API float ImGui_GetScrollMaxX(void);                                                  
CIMGUI_API float ImGui_GetScrollMaxY(void);                                                  
CIMGUI_API void  ImGui_SetScrollHereX(float center_x_ratio );                    
CIMGUI_API void  ImGui_SetScrollHereY(float center_y_ratio );                    
CIMGUI_API void  ImGui_SetScrollFromPosX(float local_x, float center_x_ratio );  
CIMGUI_API void  ImGui_SetScrollFromPosY(float local_y, float center_y_ratio );  
CIMGUI_API void         ImGui_PushFontFloat(ImFont* font, float font_size_base_unscaled);  
CIMGUI_API void         ImGui_PopFont(void);
CIMGUI_API ImFont*      ImGui_GetFont(void);                                               
CIMGUI_API float        ImGui_GetFontSize(void);                                           
CIMGUI_API ImFontBaked* ImGui_GetFontBaked(void);                                          
CIMGUI_API void ImGui_PushStyleColor(ImGuiCol idx, ImU32 col);            
CIMGUI_API void ImGui_PushStyleColorImVec4(ImGuiCol idx, ImVec4 col);
CIMGUI_API void ImGui_PopStyleColor(int count );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef enum
{
    ImGuiWindowFlags_None                      = 0,
    ImGuiWindowFlags_NoTitleBar                = 1<<0,   
    ImGuiWindowFlags_NoResize                  = 1<<1,   
    ImGuiWindowFlags_NoMove                    = 1<<2,   
    ImGuiWindowFlags_NoScrollbar               = 1<<3,   
    ImGuiWindowFlags_NoScrollWithMouse         = 1<<4,   
    ImGuiWindowFlags_NoCollapse                = 1<<5,   
    ImGuiWindowFlags_AlwaysAutoResize          = 1<<6,   
    ImGuiWindowFlags_NoBackground              = 1<<7,   
    ImGuiWindowFlags_NoSavedSettings           = 1<<8,   
    ImGuiWindowFlags_NoMouseInputs             = 1<<9,   
    ImGuiWindowFlags_MenuBar                   = 1<<10,  
    ImGuiWindowFlags_HorizontalScrollbar       = 1<<11,  
    ImGuiWindowFlags_NoFocusOnAppearing        = 1<<12,  
    ImGuiWindowFlags_NoBringToFrontOnFocus     = 1<<13,  
    ImGuiWindowFlags_AlwaysVerticalScrollbar   = 1<<14,  
    ImGuiWindowFlags_AlwaysHorizontalScrollbar = 1<<15,  
    ImGuiWindowFlags_NoNavInputs               = 1<<16,  
    ImGuiWindowFlags_NoNavFocus                = 1<<17,  
    ImGuiWindowFlags_UnsavedDocument           = 1<<18,  
    ImGuiWindowFlags_NoNav                     = ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
    ImGuiWindowFlags_NoDecoration              = ImGuiWindowFlags_NoTitleBar | ImGuiWindowFlags_NoResize | ImGuiWindowFlags_NoScrollbar | ImGuiWindowFlags_NoCollapse,
    ImGuiWindowFlags_NoInputs                  = ImGuiWindowFlags_NoMouseInputs | ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
    ImGuiWindowFlags_ChildWindow               = 1<<24,  
    ImGuiWindowFlags_Tooltip                   = 1<<25,  
    ImGuiWindowFlags_Popup                     = 1<<26,  
    ImGuiWindowFlags_Modal                     = 1<<27,  
    ImGuiWindowFlags_ChildMenu                 = 1<<28,  
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiWindowFlags_NavFlattened              = 1<<29,  
    ImGuiWindowFlags_AlwaysUseWindowPadding    = 1<<30,  
#endif 
} ImGuiWindowFlags_;
typedef enum
{
    ImGuiCol_Text,
    ImGuiCol_TextDisabled,
    ImGuiCol_WindowBg,                                                
    ImGuiCol_ChildBg,                                                 
    ImGuiCol_PopupBg,                                                 
    ImGuiCol_Border,
    ImGuiCol_BorderShadow,
    ImGuiCol_FrameBg,                                                 
    ImGuiCol_FrameBgHovered,
    ImGuiCol_FrameBgActive,
    ImGuiCol_TitleBg,                                                 
    ImGuiCol_TitleBgActive,                                           
    ImGuiCol_TitleBgCollapsed,                                        
    ImGuiCol_MenuBarBg,
    ImGuiCol_ScrollbarBg,
    ImGuiCol_ScrollbarGrab,
    ImGuiCol_ScrollbarGrabHovered,
    ImGuiCol_ScrollbarGrabActive,
    ImGuiCol_CheckMark,                                               
    ImGuiCol_SliderGrab,
    ImGuiCol_SliderGrabActive,
    ImGuiCol_Button,
    ImGuiCol_ButtonHovered,
    ImGuiCol_ButtonActive,
    ImGuiCol_Header,                                                  
    ImGuiCol_HeaderHovered,
    ImGuiCol_HeaderActive,
    ImGuiCol_Separator,
    ImGuiCol_SeparatorHovered,
    ImGuiCol_SeparatorActive,
    ImGuiCol_ResizeGrip,                                              
    ImGuiCol_ResizeGripHovered,
    ImGuiCol_ResizeGripActive,
    ImGuiCol_InputTextCursor,                                         
    ImGuiCol_TabHovered,                                              
    ImGuiCol_Tab,                                                     
    ImGuiCol_TabSelected,                                             
    ImGuiCol_TabSelectedOverline,                                     
    ImGuiCol_TabDimmed,                                               
    ImGuiCol_TabDimmedSelected,                                       
    ImGuiCol_TabDimmedSelectedOverline,                               
    ImGuiCol_PlotLines,
    ImGuiCol_PlotLinesHovered,
    ImGuiCol_PlotHistogram,
    ImGuiCol_PlotHistogramHovered,
    ImGuiCol_TableHeaderBg,                                           
    ImGuiCol_TableBorderStrong,                                       
    ImGuiCol_TableBorderLight,                                        
    ImGuiCol_TableRowBg,                                              
    ImGuiCol_TableRowBgAlt,                                           
    ImGuiCol_TextLink,                                                
    ImGuiCol_TextSelectedBg,                                          
    ImGuiCol_TreeLines,                                               
    ImGuiCol_DragDropTarget,                                          
    ImGuiCol_NavCursor,                                               
    ImGuiCol_NavWindowingHighlight,                                   
    ImGuiCol_NavWindowingDimBg,                                       
    ImGuiCol_ModalWindowDimBg,                                        
    ImGuiCol_COUNT,
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiCol_TabActive                 = ImGuiCol_TabSelected,        
    ImGuiCol_TabUnfocused              = ImGuiCol_TabDimmed,          
    ImGuiCol_TabUnfocusedActive        = ImGuiCol_TabDimmedSelected,  
    ImGuiCol_NavHighlight              = ImGuiCol_NavCursor,          
#endif 
} ImGuiCol_;
struct ImGuiSizeCallbackData_t
{
    void*  UserData;     
    ImVec2 Pos;          
    ImVec2 CurrentSize;  
    ImVec2 DesiredSize;  
};
struct ImFontBaked_t
{
    ImVector_float       IndexAdvanceX;             
    float                FallbackAdvanceX;          
    float                Size;                      
    float                RasterizerDensity;         
    ImVector_ImU16       IndexLookup;               
    ImVector_ImFontGlyph Glyphs;                    
    int                  FallbackGlyphIndex;        
    float                Ascent, Descent;           
    unsigned int         MetricsTotalSurface : 26;  
    unsigned int         WantDestroy : 1;           
    unsigned int         LockLoadingFallback : 1;   
    int                  LastUsedFrame;             
    ImGuiID              BakedId;                   
    ImFont*              ContainerFont;             
    void*                FontLoaderDatas;           
};
struct ImFont_t
{
    ImFontBaked*             LastBaked;                                             
    ImFontAtlas*             ContainerAtlas;                                        
    ImFontFlags              Flags;                                                 
    float                    CurrentRasterizerDensity;                              
    ImGuiID                  FontId;                                                
    float                    LegacySize;                                            
    ImVector_ImFontConfigPtr Sources;                                               
    ImWchar                  EllipsisChar;                                          
    ImWchar                  FallbackChar;                                          
    ImU8                     Used8kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/8192/8];  
    bool                     EllipsisAutoBake;                                      
    ImGuiStorage             RemapPairs;                                            
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float                    Scale;                                                 
#endif 
};