src/Editor/LibreLancer.ImUI/ImGuiBindings/Generated/ImGuiNative.cs


    /// <summary>
    /// get current window position in screen space (IT IS UNLIKELY YOU EVER NEED TO USE THIS. Consider always using GetCursorScreenPos() and GetContentRegionAvail() instead)
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetWindowPos();

    /// <summary>
    /// get current window size (IT IS UNLIKELY YOU EVER NEED TO USE THIS. Consider always using GetCursorScreenPos() and GetContentRegionAvail() instead)
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetWindowSize();

    /// <summary>
    /// get current window width (IT IS UNLIKELY YOU EVER NEED TO USE THIS). Shortcut for GetWindowSize().x.
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetWindowWidth();

    /// <summary>
    /// get current window height (IT IS UNLIKELY YOU EVER NEED TO USE THIS). Shortcut for GetWindowSize().y.
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetWindowHeight();

    /// <summary>
    /// <para>Window manipulation</para>
    /// <para>- Prefer using SetNextXXX functions (before Begin) rather that SetXXX functions (after Begin).</para>
    /// set next window position. call before Begin(). use pivot=(0.5f,0.5f) to center on given point, etc.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextWindowPos(System.Numerics.Vector2 pos, ImGuiCond cond, System.Numerics.Vector2 pivot);

    /// <summary>
    /// set next window size. set axis to 0.0f to force an auto-fit on this axis. call before Begin()
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextWindowSize(System.Numerics.Vector2 size, ImGuiCond cond);

    /// <summary>
    /// set next window size limits. use 0.0f or FLT_MAX if you don't want limits. Use -1 for both min and max of same axis to preserve current size (which itself is a constraint). Use callback to apply non-trivial programmatic constraints.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextWindowSizeConstraints(System.Numerics.Vector2 size_min, System.Numerics.Vector2 size_max, delegate* unmanaged<ImGuiSizeCallbackData*, void> custom_callback, IntPtr custom_callback_data);

    /// <summary>
    /// set next window content size (~ scrollable client area, which enforce the range of scrollbars). Not including window decorations (title bar, menu bar, etc.) nor WindowPadding. set an axis to 0.0f to leave it automatic. call before Begin()
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextWindowContentSize(System.Numerics.Vector2 size);

    /// <summary>
    /// set next window collapsed state. call before Begin()
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextWindowCollapsed(byte collapsed, ImGuiCond cond);

    /// <summary>
    /// set next window to be focused / top-most. call before Begin()
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextWindowFocus();

    /// <summary>
    /// set next window scrolling value (use &lt; 0.0f to not affect a given axis).
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextWindowScroll(System.Numerics.Vector2 scroll);

    /// <summary>
    /// set next window background color alpha. helper to easily override the Alpha component of ImGuiCol_WindowBg/ChildBg/PopupBg. you may also use ImGuiWindowFlags_NoBackground.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextWindowBgAlpha(float alpha);

    /// <summary>
    /// (not recommended) set current window position - call within Begin()/End(). prefer using SetNextWindowPos(), as this may incur tearing and side-effects.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetWindowPos(System.Numerics.Vector2 pos, ImGuiCond cond);

    /// <summary>
    /// (not recommended) set current window size - call within Begin()/End(). set to ImVec2(0, 0) to force an auto-fit. prefer using SetNextWindowSize(), as this may incur tearing and minor side-effects.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetWindowSize(System.Numerics.Vector2 size, ImGuiCond cond);

    /// <summary>
    /// (not recommended) set current window collapsed state. prefer using SetNextWindowCollapsed().
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetWindowCollapsed(byte collapsed, ImGuiCond cond);

    /// <summary>
    /// (not recommended) set current window to be focused / top-most. prefer using SetNextWindowFocus().
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetWindowFocus();

    /// <summary>
    /// set named window position.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetWindowPosStr(byte* name, System.Numerics.Vector2 pos, ImGuiCond cond);

    /// <summary>
    /// set named window size. set axis to 0.0f to force an auto-fit on this axis.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetWindowSizeStr(byte* name, System.Numerics.Vector2 size, ImGuiCond cond);

    /// <summary>
    /// set named window collapsed state
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetWindowCollapsedStr(byte* name, byte collapsed, ImGuiCond cond);

    /// <summary>
    /// set named window to be focused / top-most. use NULL to remove focus.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetWindowFocusStr(byte* name);

    /// <summary>
    /// <para>Windows Scrolling</para>
    /// <para>- Any change of Scroll will be applied at the beginning of next frame in the first call to Begin().</para>
    /// <para>- You may instead use SetNextWindowScroll() prior to calling Begin() to avoid this delay, as an alternative to using SetScrollX()/SetScrollY().</para>
    /// get scrolling amount [0 .. GetScrollMaxX()]
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetScrollX();

    /// <summary>
    /// get scrolling amount [0 .. GetScrollMaxY()]
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetScrollY();

    /// <summary>
    /// set scrolling amount [0 .. GetScrollMaxX()]
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetScrollX(float scroll_x);

    /// <summary>
    /// set scrolling amount [0 .. GetScrollMaxY()]
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetScrollY(float scroll_y);

    /// <summary>
    /// get maximum scrolling amount ~~ ContentSize.x - WindowSize.x - DecorationsSize.x
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetScrollMaxX();

    /// <summary>
    /// get maximum scrolling amount ~~ ContentSize.y - WindowSize.y - DecorationsSize.y
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetScrollMaxY();

    /// <summary>
    /// adjust scrolling amount to make current cursor position visible. center_x_ratio=0.0: left, 0.5: center, 1.0: right. When using to make a "default/current item" visible, consider using SetItemDefaultFocus() instead.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetScrollHereX(float center_x_ratio);

    /// <summary>
    /// adjust scrolling amount to make current cursor position visible. center_y_ratio=0.0: top, 0.5: center, 1.0: bottom. When using to make a "default/current item" visible, consider using SetItemDefaultFocus() instead.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetScrollHereY(float center_y_ratio);

    /// <summary>
    /// adjust scrolling amount to make given position visible. Generally GetCursorStartPos() + offset to compute a valid position.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetScrollFromPosX(float local_x, float center_x_ratio);

    /// <summary>
    /// adjust scrolling amount to make given position visible. Generally GetCursorStartPos() + offset to compute a valid position.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetScrollFromPosY(float local_y, float center_y_ratio);

    /// <summary>
    /// <para>Parameters stacks (font)</para>
    /// <para>- PushFont(font, 0.0f)                       // Change font and keep current size</para>
    /// <para>- PushFont(NULL, 20.0f)                      // Keep font and change current size</para>
    /// <para>- PushFont(font, 20.0f)                      // Change font and set size to 20.0f</para>
    /// <para>- PushFont(font, style.FontSizeBase * 2.0f)  // Change font and set size to be twice bigger than current size.</para>
    /// <para>- PushFont(font, font-&gt;LegacySize)           // Change font and set size to size passed to AddFontXXX() function. Same as pre-1.92 behavior.</para>
    /// <para>*IMPORTANT* before 1.92, fonts had a single size. They can now be dynamically be adjusted.</para>
    /// <para>- In 1.92 we have REMOVED the single parameter version of PushFont() because it seems like the easiest way to provide an error-proof transition.</para>
    /// <para>- PushFont(font) before 1.92 = PushFont(font, font-&gt;LegacySize) after 1.92          // Use default font size as passed to AddFontXXX() function.</para>
    /// <para>*IMPORTANT* global scale factors are applied over the provided size.</para>
    /// <para>- Global scale factors are: 'style.FontScaleMain', 'style.FontScaleDpi' and maybe more.</para>
    /// <para>-  If you want to apply a factor to the _current_ font size:</para>
    /// <para>- CORRECT:   PushFont(NULL, style.FontSizeBase)         // use current unscaled size    == does nothing</para>
    /// <para>- CORRECT:   PushFont(NULL, style.FontSizeBase * 2.0f)  // use current unscaled size x2 == make text twice bigger</para>
    /// <para>- INCORRECT: PushFont(NULL, GetFontSize())              // INCORRECT! using size after global factors already applied == GLOBAL SCALING FACTORS WILL APPLY TWICE!</para>
    /// <para>- INCORRECT: PushFont(NULL, GetFontSize() * 2.0f)       // INCORRECT! using size after global factors already applied == GLOBAL SCALING FACTORS WILL APPLY TWICE!</para>
    /// Use NULL as a shortcut to keep current font. Use 0.0f to keep current size.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushFontFloat(ImFont* font, float font_size_base_unscaled);

    [DllImport("cimgui")]
    public static extern void ImGui_PopFont();

    /// <summary>
    /// get current font
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImFont* ImGui_GetFont();

    /// <summary>
    /// get current scaled font size (= height in pixels). AFTER global scale factors applied. *IMPORTANT* DO NOT PASS THIS VALUE TO PushFont()! Use ImGui::GetStyle().FontSizeBase to get value before global scale factors.
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetFontSize();

    /// <summary>
    /// get current font bound at current size // == GetFont()-&gt;GetFontBaked(GetFontSize())
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImFontBaked* ImGui_GetFontBaked();

    /// <summary>
    /// <para>Parameters stacks (shared)</para>
    /// modify a style color. always use this if you modify the style after NewFrame().
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushStyleColor(ImGuiCol idx, uint col);

    [DllImport("cimgui")]
    public static extern void ImGui_PushStyleColorImVec4(ImGuiCol idx, System.Numerics.Vector4 col);

    [DllImport("cimgui")]
    public static extern void ImGui_PopStyleColor(int count);
